# curry-py

./: pyproject.toml
src/curry_py/: __init__.py  curry.py
src/currypy/: __init__.py  curry.py
