[tool.poetry]
name = "curry-py"
version = "0.3.2"
description = ""
license = "MIT"
authors = ["Ketsumi <mewtropolis.ketsumi@gmail.com>"]
keywords = [
    "python",
    "fp",
    "utility"
]
readme = "README.md"
packages = [{include = "currypy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
